# Watt-The-Hack-Engine-Public

./: README.md  pyproject.toml
examples/: local_agent_eval.py
notebooks/: playtester_local_eval.ipynb  training_starter.ipynb
tests/: test_engine.py
watt_the_hack/: playtest.py
watt_the_hack/api/: server.py
watt_the_hack/controllers/: parametric.py  rule_based.py
watt_the_hack/data_loaders/: scenarios.py
watt_the_hack/engine/: engine.py
watt_the_hack/engine/legacy engines/: simple_engine.py
watt_the_hack/metrics/: metrics.py
watt_the_hack/scenarios/synthetic/: ai_grid_shock.json  cybersecurity_sandbox.json  duck_curve.json  melbourne_cold_winter.json  operators_mandate.json
watt_the_hack/scripts/: admin_controller.py  freeze_baselines.py  generate_scenario_4.py
watt_the_hack/simulation/: runner.py  strategy.py
