[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "watt-the-hack"
version = "0.1.0"
description = "Watt The Hack 24-hour energy grid simulation hackathon engine"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
api = [
    "fastapi",
    "uvicorn",
]
playtest = [
    "matplotlib>=3.5",
]
test = [
    "pytest",
    "pytest-cov",
]

[tool.setuptools.packages.find]
include = ["watt_the_hack*"]
